# plc-ladder-sim

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: frontend.instructions.md  rust.instructions.md
.github/prompts/: new-ladder-instruction.prompt.md  review-changes.prompt.md  verify-changes.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
docs/: AI_AGENTS.md  ARCHITECTURE.md  MODBUS.md  RELEASES.md  SETUP.md  WATER_TANK_MODBUS_MAP.md  WATER_TANK_PUMP_STATION.md
programs/: water_tank_dual_pump.json  water_tank_modbus_map.json
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: henry.w@example.net  icon.icns
src-tauri/src/: audit.rs  commands.rs  lib.rs  logbuf.rs  main.rs
src-tauri/src/plc/: README.md  compiler.rs  engine.rs  memconfig.rs  memory.rs  mod.rs  modbus.rs  modbus_map.rs  symbols.rs  water_tank_compile_test.rs
src/app/: App.svelte  app.css
src/features/audit/: AuditPanel.svelte
src/features/diagnostics/: LogsView.svelte
src/features/docs/: MathHelpView.svelte
src/features/ladder/: index.ts
src/features/memory/: MemoryAllocationView.svelte  MemoryView.svelte
src/features/modbus/: ModbusConfigView.svelte  WaterTankRegisterMapView.svelte
src/shared/lib/: api.ts  types.ts  (+6 more)
(+80 files in other folders)
