# =============================================================================
# PLC Ladder Simulator Pro — Rust / Tauri v2 workspace crate
# High-assurance core: deterministic scan, Modbus TCP slave, audit trail
# =============================================================================
[package]
name = "plc-ladder-sim"
version = "1.0.2"
description = "PLC Ladder Simulator Pro — desktop LAD editor/simulator with Modbus TCP slave"
authors = ["PLC Ladder Simulator contributors"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "plc_ladder_sim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.16", default-features = false, features = ["tcp-server"] }
futures = "0.3"
dashmap = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
thread-priority = "1"
byteorder = "1"
bincode = "1"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
